# rust-carfagno-enterprises

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  test_multi_tickers.py  test_performance.py
app/: main.py
app/services/: analysis_service.py  news_service.py
backend/: Dockerfile  README.md  analysis_response.json  fly.toml  pyproject.toml  render  render.yaml  requirements.txt  test_export.csv  test_exports.py  test_imports.py  test_integration.py
backend/app/: .env  .env.example  main.py  models.py  requirements.txt
backend/app/services/: analysis_service.py  news_service.py  report_service.py
backend/app/services/export/: __init__.py  csv_export.py  pdf_export.py
backend/backend/: check_env.py  requirements.txt
backend/backend/app/: models.py
backend/backend/app/services/: report_service.py
backend/frontend/: package-lock.json  package.json
backend/frontend/src/components/: Dashboard.tsx  Filters.tsx  Header.tsx
backend/frontend/src/components/ui/: calendar.tsx
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  test_backend_integration.ts  test_frontend_integration.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  api.ts  env.d.ts  index.css  types.ts
frontend/src/components/: Dashboard.tsx  Filters.tsx  Header.tsx  StockInput.tsx
frontend/test-results/: .last-run.json
frontend/tests/e2e/: app.spec.ts  test_frontend_integration.ts
