[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rust-carfagno-enterprises"
version = "0.1.0"
authors = [
    { name="Carfagno Enterprises" }
]
description = "A stock news analysis tool using News API and ChatGPT"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.5",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.urls]
"Homepage" = "https://github.com/DomC21/rust-carfagno-enterprises"
"Bug Tracker" = "https://github.com/DomC21/rust-carfagno-enterprises/issues"
