[tool.poetry]
name = "rust-carfagno-enterprises"
version = "0.1.0"
description = "A stock news analysis tool using News API and ChatGPT"
authors = ["Dom Carfagno"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
openai = "^1.3.7"
pydantic = "^2.5.2"
python-multipart = "^0.0.6"
reportlab = "^4.0.8"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
